add tofu ocean